# thesis-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fused.md  README.md  README.zh-CN.fused.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  install_openclaw.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_check_once.py  run_evidence_pipeline.py  run_fix_cycle.py  skills-manifest.json  thesis-skills-endnote-v0.4-plan.md
00-bib-endnote/: THESIS_BIB_ENDNOTE.md  check_endnote_export.py  import_library.py
00-bib-zotero/: THESIS_BIB_ZOTERO.md  check_bib_quality.py  sync_from_word.py
00-endnote/: THESIS_ENDNOTE.md
00-zotero/: THESIS_ZOTERO.md  check_bib_quality.py
01-migrate/: THESIS_MIGRATE.md
01-word-to-latex/: THESIS_WORD_TO_LATEX.md  migrate_project.py
02-content/: THESIS_CONTENT.md  scan_symbols.py
02-latex-to-word/: THESIS_LATEX_TO_WORD.md  migrate_project.py
03-latex-review-diff/: THESIS_REVIEW_DIFF.md  review_diff.py
03-references/: THESIS_REFERENCES.md  check_references.py
04-language/: THESIS_LANGUAGE.md  check_language.py
04-word-review-ingest/: THESIS_WORD_REVIEW_INGEST.md  feedback_ingest.py
05-format/: THESIS_FORMAT.md  check_structure.py
06-rules/: THESIS_RULES.md
07-word/: FEASIBILITY.zh-CN.md  README_SPLIT_DRAFT.zh-CN.md  REPO_SPLIT_POSITIONING.zh-CN.md  THESIS_WORD.md  VALIDATION_PLAN.zh-CN.md  actions_spec.md  plan_schema.md
10-check-references/: THESIS_CHECK_REFERENCES.md  check_references.py
11-check-language/: THESIS_CHECK_LANGUAGE.md  check_language.py
12-check-format/: THESIS_CHECK_FORMAT.md  check_format.py
13-check-content/: THESIS_CHECK_CONTENT.md  check_content.py
14-check-language-deep/: THESIS_CHECK_LANGUAGE_DEEP.md  (+1 more)
(+349 files in other folders)
